--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-ca">
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>Home</title>
 </head>
 <body>
   <header role="banner">
@@ -18,6 +18,9 @@
       </ul>
     </nav>
   </header>
+  <main>
+
+  </main>
 </body>
 </html>
 Berries
