--- a/resources.html
+++ b/resources.html
@@ -1,6 +1,18 @@
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title>Berries</title>
+  </head>
+  <body>
+    <h1>Find out more about berries!</h1>
+
+  </body>
+</html>
+
 Resources
 
-Find out more about berries!
+
 
 - https://en.wikipedia.org/wiki/Berry
 - https://en.wikipedia.org/wiki/Blueberry
