Add links to berries index

--- a/berries/index.html
+++ b/berries/index.html
@@ -5,21 +5,29 @@
   <title>Berries</title>
 </head>
 <body>
+<header>
 
+</header>
   <h1>Lots of berries—some you didn’t know!</h1>
 
 <main>
   There are lots of berries in many different sizes & shapes. And, botanically, there are lots of berries that you don’t normally consider.
+<a href="berries/bananas.html">Bananas</a>
+<a href="berries/grapes.html">Grapes</a>
+<a href="berries/red-currants.html">Red Currants</a>
+<a href="berries/blueberries.html">Blueberries</a>
+
+
 </main>
 
 
 
 
 </body>
-</html>Berries
+</html>
 
 
-
+berries
 
 - Blueberries
 - Grapes
