Add head to berries index

--- a/berries/index.html
+++ b/berries/index.html
@@ -6,18 +6,23 @@
 </head>
 <body>
 <header>
-
+<head>
+  <strong>Berries</strong>
+</head>
 </header>
   <h1>Lots of berries—some you didn’t know!</h1>
 
 <main>
   There are lots of berries in many different sizes & shapes. And, botanically, there are lots of berries that you don’t normally consider.
-<a href="berries/bananas.html">Bananas</a>
+  <ul>
+
+
+<li><a href="berries/bananas.html">Bananas</a></li>
 <a href="berries/grapes.html">Grapes</a>
 <a href="berries/red-currants.html">Red Currants</a>
 <a href="berries/blueberries.html">Blueberries</a>
 
-
+</ul>
 </main>
 
 
