Add viewport to pages

--- a/resources.html
+++ b/resources.html
@@ -2,9 +2,17 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Berries</title>
+    <title>Resources</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1">
   </head>
   <body>
+    <nav>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="resources.html">Resources</a></li>
+        <li><a href="berries/index.html">Berries</a></li>
+      </ul>
+    </nav>
     <h1>Find out more about berries!</h1>
 
   </body>
