--- a/berries/bananas.html
+++ b/berries/bananas.html
@@ -2,11 +2,12 @@
 <html lang="en-ca">
 <head>
   <meta charset="utf-8">
-  <title>Berries</title>
+  <title>Bananas</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1">
 </head>
 <body>
   <h1>Bananas</h1>
+  Not commonly considered a berry, bananas are botanically a berry: a simple fruit with seeds and pulp produced from a single flower.
+
 </body>
 </html>
-
-Not commonly considered a berry, bananas are botanically a berry: a simple fruit with seeds and pulp produced from a single flower.
