--- a/berries/grapes.html
+++ b/berries/grapes.html
@@ -1,3 +1,24 @@
-Grapes
+<!DOCTYPE html>
+<html lang="en-ca">
+<head>
+  <meta charset="utf-8">
+  <title>Grapes</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+</head>
+<body>
+<header role="banner">
+  <nav role="navigation">
+    <ul>
+      <li><a href="../index.html">Home</a></li>
+      <li><a href="../resources.html">Resources</a></li>
+      <li><a href="berries/index.html">Berries</a></li>
+    </ul>
+  </nav>
+</header>
 
-Grapes can be eaten raw or they can be used for making wine, jam, juice, jelly, grape seed extract, raisins, vinegar, and grape seed oil.
+<main role="main">
+</main>
+  Grapes can be eaten raw or they can be used for making wine, jam, juice, jelly, grape seed extract, raisins, vinegar, and grape seed oil.
+
+</body>
+</html>
