--- a/berries/index.html
+++ b/berries/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Berries</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1">
 </head>
 <body>
 <header>
@@ -18,9 +19,9 @@
 
 
 <li><a href="berries/bananas.html">Bananas</a></li>
-<a href="berries/grapes.html">Grapes</a>
-<a href="berries/red-currants.html">Red Currants</a>
-<a href="berries/blueberries.html">Blueberries</a>
+<li><a href="berries/grapes.html">Grapes</a></li>
+<li><a href="berries/red-currants.html">Red Currants</a></li>
+<li><a href="berries/blueberries.html">Blueberries</a></li>
 
 </ul>
 </main>
