Add nav to berries index

--- a/berries/grapes.html
+++ b/berries/grapes.html
@@ -7,6 +7,7 @@
 </head>
 <body>
 <header role="banner">
+  <h1>Grapes</h1>
   <nav role="navigation">
     <ul>
       <li><a href="../index.html">Home</a></li>
