Fix berry page links

--- a/berries/index.html
+++ b/berries/index.html
@@ -6,33 +6,35 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
 </head>
 <body>
-<header>
+  <header>
 
-<head>
-  <strong>Berries</strong>
+    <head>
+      <strong>Berries</strong>
+      <nav>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="resources.html">Resources</a></li>
+          <li><a href="berries/index.html">Berries</a></li>
+        </ul>
+      </nav>
+    </head>
+  </header>
+  <h1>Lots of berries—some you didn’t know!</h1>
   <nav>
     <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="resources.html">Resources</a></li>
-      <li><a href="berries/index.html">Berries</a></li>
+      <li><a href="berries/bananas.html">Bananas</a></li>
+      <li><a href="berries/grapes.html">Grapes</a></li>
+      <li><a href="berries/red-currants.html">Red Currants</a></li>
+      <li><a href="berries/blueberries.html">Blueberries</a></li>
+
     </ul>
   </nav>
-</head>
-</header>
-  <h1>Lots of berries—some you didn’t know!</h1>
 
-<main>
-  There are lots of berries in many different sizes & shapes. And, botanically, there are lots of berries that you don’t normally consider.
-  <ul>
+  <main>
+    There are lots of berries in many different sizes & shapes. And, botanically, there are lots of berries that you don’t normally consider.
 
 
-<li><a href="berries/bananas.html">Bananas</a></li>
-<li><a href="berries/grapes.html">Grapes</a></li>
-<li><a href="berries/red-currants.html">Red Currants</a></li>
-<li><a href="berries/blueberries.html">Blueberries</a></li>
-
-</ul>
-</main>
+  </main>
 
 
 </body>
