--- a/berries/bananas.html
+++ b/berries/bananas.html
@@ -6,7 +6,20 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
 </head>
 <body>
-  <h1>Bananas</h1>
+  <header role="banner">
+      <h1>Bananas</h1>
+    <nav role="navigation">
+      <ul>
+        <li><a href="../index.html">Home</a></li>
+        <li><a href="../resources.html">Resources</a></li>
+        <li><a href="berries/index.html">Berries</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <main role="main">
+  </main>
+
   Not commonly considered a berry, bananas are botanically a berry: a simple fruit with seeds and pulp produced from a single flower.
 
 </body>
