--- a/berries/index.html
+++ b/berries/index.html
@@ -20,20 +20,19 @@
     </head>
   </header>
   <h1>Lots of berries—some you didn’t know!</h1>
-  <nav>
-    <ul>
-      <li><a href="berries/bananas.html">Bananas</a></li>
-      <li><a href="berries/grapes.html">Grapes</a></li>
-      <li><a href="berries/red-currants.html">Red Currants</a></li>
-      <li><a href="berries/blueberries.html">Blueberries</a></li>
-
-    </ul>
-  </nav>
 
   <main>
     There are lots of berries in many different sizes & shapes. And, botanically, there are lots of berries that you don’t normally consider.
 
+    <nav>
+      <ul>
+        <li><a href="#berries/bananas.html">Bananas</a></li>
+        <li><a href="#berries/grapes.html">Grapes</a></li>
+        <li><a href="#berries/red-currants.html">Red Currants</a></li>
+        <li><a href="#berries/blueberries.html">Blueberries</a></li>
 
+      </ul>
+    </nav>
   </main>
 
 
