--- a/resources.html
+++ b/resources.html
@@ -1,18 +1,25 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Resources</title>
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-  </head>
-  <body>
-    <nav>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="resources.html">Resources</a></li>
-        <li><a href="berries/index.html">Berries</a></li>
-      </ul>
-    </nav>
+<html lang="en-ca">
+<head>
+  <meta charset="utf-8">
+  <title>Resources</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+</head>
+
+<body>
+  <header>
+
+    <head>
+      <strong>Berries</strong>
+      <nav>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="resources.html">Resources</a></li>
+          <li><a href="berries/index.html">Berries</a></li>
+        </ul>
+      </nav>
+    </head>
+  </header>
     <h1>Find out more about berries!</h1>
 
   </body>
