Fix resources titles

--- a/resources.html
+++ b/resources.html
@@ -8,8 +8,6 @@
 
 <body>
   <header>
-
-    <head>
       <strong>Berries</strong>
       <nav>
         <ul>
@@ -18,14 +16,13 @@
           <li><a href="berries/index.html">Berries</a></li>
         </ul>
       </nav>
-    </head>
   </header>
-    <h1>Find out more about berries!</h1>
-
+    <h1>Resources</h1>
+Find out more about berries!
   </body>
 </html>
 
-Resources
+
 
 
 
