Fix berry page links

--- a/berries/index.html
+++ b/berries/index.html
@@ -5,6 +5,7 @@
   <title>Berries</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
 </head>
+
 <body>
   <header>
 
@@ -26,10 +27,10 @@
 
     <nav>
       <ul>
-        <li><a href="#berries/bananas.html">Bananas</a></li>
-        <li><a href="#berries/grapes.html">Grapes</a></li>
-        <li><a href="#berries/red-currants.html">Red Currants</a></li>
-        <li><a href="#berries/blueberries.html">Blueberries</a></li>
+        <li><a href="berries/bananas.html">Bananas</a></li>
+        <li><a href="berries/grapes.html">Grapes</a></li>
+        <li><a href="berries/red-currants.html">Red Currants</a></li>
+        <li><a href="berries/blueberries.html">Blueberries</a></li>
 
       </ul>
     </nav>
