Add wiki link to resources

--- a/resources.html
+++ b/resources.html
@@ -8,28 +8,29 @@
 
 <body>
   <header>
-      <strong>Berries</strong>
-      <nav>
-        <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="resources.html">Resources</a></li>
-          <li><a href="berries/index.html">Berries</a></li>
-        </ul>
-      </nav>
-  </header>
-    <h1>Resources</h1>
-Find out more about berries!
-  </body>
-</html>
+    <strong>Berries</strong>
+    <nav role="navigation">
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="resources.html">Resources</a></li>
+        <li><a href="berries/index.html">Berries</a></li>
+      </ul>
+    </nav>
+    </header>
+
+    <main role="main">
+
+    </main>
+    <a href="https://en.wikipedia.org/wiki/Berry" aria-label="Read more about Berries">Read more</a>
 
 
-
-
-
-https://en.wikipedia.org/wiki/Berry
+<li>https://en.wikipedia.org/wiki/Berry</li>
 https://en.wikipedia.org/wiki/Blueberry
 https://en.wikipedia.org/wiki/Grape
 https://en.wikipedia.org/wiki/Redcurrant
 https://en.wikipedia.org/wiki/Banana
 https://www.chapters.indigo.ca/en-ca/books/whats-wrong-with-my-fruit/9781604693584-item.html
 https://www.chapters.indigo.ca/en-ca/books/fresh-from-the-garden-an/9780816698394-item.html
+<h1>Resources</h1> Find out more about berries!
+</body>
+</html>
