--- a/berries/grapes.html
+++ b/berries/grapes.html
@@ -8,7 +8,7 @@
 
 <body>
   <header role="banner">
-    <h1>Grapes</h1>
+    <strong>Berries</strong>
     <nav role="navigation">
       <ul>
         <li><a href="../index.html">Home</a></li>
@@ -19,9 +19,12 @@
   </header>
 
 
-
   <main role="main">
-  Grapes can be eaten raw or they can be used for making wine, jam, juice, jelly, grape seed extract, raisins, vinegar, and grape seed oil.
+    <h1>Grapes</h1>
+    <img src="../images/grapes.jpg" alt="">
+    <p>Grapes can be eaten raw or they can be used for making wine, jam, juice, jelly, grape seed extract, raisins, vinegar, and grape seed oil.</p>
+
   </main>
 </body>
+<footer role="contentinfo"><small>Berries</small> ©</footer>
 </html>
