--- a/index.html
+++ b/index.html
@@ -18,19 +18,17 @@
     </nav>
   </header>
   <main>
+    Berries
 
+    Berries, berries, oh my!
+
+    In everyday English, “berry” is a term for any small edible fruit. These “berries” are usually juicy, round, brightly coloured, sweet or sour, and do not have a stone or pit, although many seeds may be present.
+
+    - Blueberries
+    - Grapes
+    - Red Currants
+    - Bananas
   </main>
 </body>
+<footer role="contentinfo"><small>Berries</small> ©</footer>
 </html>
-Berries
-
-Berries, berries, oh my!
-
-In everyday English, “berry” is a term for any small edible fruit. These “berries” are usually juicy, round, brightly coloured, sweet or sour, and do not have a stone or pit, although many seeds may be present.
-
-- Blueberries
-- Grapes
-- Red Currants
-- Bananas
-
-© Berries
