--- a/resources.html
+++ b/resources.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-  <header>
+  <header role="banner">
     <strong>Berries</strong>
     <nav role="navigation">
       <ul>
@@ -16,21 +16,21 @@
         <li><a href="berries/index.html">Berries</a></li>
       </ul>
     </nav>
-    </header>
+  </header>
 
-    <main role="main">
+  <main role="main">
+    <h1>Resources</h1> Find out more about berries!
 
-    </main>
-    <a href="https://en.wikipedia.org/wiki/Berry" aria-label="Read more about Berries">Read more</a>
+  <a href="https://en.wikipedia.org/wiki/Berry" aria-label="Read more about Berries">Read More</a>
 
 
-<li>https://en.wikipedia.org/wiki/Berry</li>
-https://en.wikipedia.org/wiki/Blueberry
-https://en.wikipedia.org/wiki/Grape
-https://en.wikipedia.org/wiki/Redcurrant
-https://en.wikipedia.org/wiki/Banana
-https://www.chapters.indigo.ca/en-ca/books/whats-wrong-with-my-fruit/9781604693584-item.html
-https://www.chapters.indigo.ca/en-ca/books/fresh-from-the-garden-an/9780816698394-item.html
-<h1>Resources</h1> Find out more about berries!
+  <a href="https://en.wikipedia.org/wiki/Berry"></a>
+  https://en.wikipedia.org/wiki/Blueberry
+  https://en.wikipedia.org/wiki/Grape
+  https://en.wikipedia.org/wiki/Redcurrant
+  https://en.wikipedia.org/wiki/Banana
+  https://www.chapters.indigo.ca/en-ca/books/whats-wrong-with-my-fruit/9781604693584-item.html
+  https://www.chapters.indigo.ca/en-ca/books/fresh-from-the-garden-an/9780816698394-item.html
+</main>
 </body>
 </html>
