Add content and images tags to bananas page

--- a/index.html
+++ b/index.html
@@ -30,5 +30,5 @@
     - Bananas
   </main>
 </body>
-<footer role="contentinfo"><small>Berries</small> ©</footer>
+<footer role="contentinfo"><small>Berries ©</small></footer>
 </html>
