--- a/berries/bananas.html
+++ b/berries/bananas.html
@@ -5,22 +5,26 @@
   <title>Bananas</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
 </head>
+
 <body>
   <header role="banner">
-      <h1>Bananas</h1>
+    <strong>Berries</strong>
     <nav role="navigation">
       <ul>
         <li><a href="../index.html">Home</a></li>
         <li><a href="../resources.html">Resources</a></li>
-        <li><a href="berries/index.html">Berries</a></li>
+        <li><a href="../berries/index.html">Berries</a></li>
       </ul>
     </nav>
   </header>
 
+
   <main role="main">
+    <h1>Bananas</h1>
+    <img src="../images/bananas.jpg" alt="">
+    <p>Not commonly considered a berry, bananas are botanically a berry: a simple fruit with seeds and pulp produced from a single flower.</p>
+
   </main>
-
-  Not commonly considered a berry, bananas are botanically a berry: a simple fruit with seeds and pulp produced from a single flower.
-
 </body>
+<footer role="contentinfo"><small>Berries ©</small></footer>
 </html>
