--- a/berries/grapes.html
+++ b/berries/grapes.html
@@ -13,7 +13,7 @@
       <ul>
         <li><a href="../index.html">Home</a></li>
         <li><a href="../resources.html">Resources</a></li>
-        <li><a href="berries/index.html">Berries</a></li>
+        <li><a href="../berries/index.html">Berries</a></li>
       </ul>
     </nav>
   </header>
@@ -26,5 +26,5 @@
 
   </main>
 </body>
-<footer role="contentinfo"><small>Berries</small> ©</footer>
+<footer role="contentinfo"><small>Berries ©</small></footer>
 </html>
