--- a/berries/blueberries.html
+++ b/berries/blueberries.html
@@ -5,9 +5,26 @@
   <title>Blueberries</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
 </head>
+
 <body>
+  <header role="banner">
+    <strong>Berries</strong>
+    <nav role="navigation">
+      <ul>
+        <li><a href="../index.html">Home</a></li>
+        <li><a href="../resources.html">Resources</a></li>
+        <li><a href="../berries/index.html">Berries</a></li>
+      </ul>
+    </nav>
+  </header>
 
+
+  <main role="main">
+    <h1>Blueberries</h1>
+    <img src="../images/bananas.jpg" alt="">
+    <p>Blueberries are perennial flowering plants with indigo-colored berries. Most common fruits sold as “blueberries” and are native to North America.</p>
+
+  </main>
 </body>
+<footer role="contentinfo"><small>Berries ©</small></footer>
 </html>
-
-Blueberries are perennial flowering plants with indigo-colored berries. Most common fruits sold as “blueberries” and are native to North America.
