Add alt tags to images

--- a/berries/red-currants.html
+++ b/berries/red-currants.html
@@ -2,11 +2,29 @@
 <html lang="en-ca">
 <head>
   <meta charset="utf-8">
-  <title>Red currants</title>
+  <title>Red Currants</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
 </head>
-<body>
-  With maturity, the tart flavour of redcurrant fruit is slightly greater than its blackcurrant relative, but with the same approximate sweetness.
 
+<body>
+  <header role="banner">
+    <strong>Berries</strong>
+    <nav role="navigation">
+      <ul>
+        <li><a href="../index.html">Home</a></li>
+        <li><a href="../resources.html">Resources</a></li>
+        <li><a href="../berries/index.html">Berries</a></li>
+      </ul>
+    </nav>
+  </header>
+
+
+  <main role="main">
+    <h1>Red Currants</h1>
+    <img src="../images/red-currants.jpg" alt="Red currants on a vine">
+    <p>With maturity, the tart flavour of redcurrant fruit is slightly greater than its blackcurrant relative, but with the same approximate sweetness.</p>
+
+  </main>
 </body>
+<footer role="contentinfo"><small>Berries ©</small></footer>
 </html>
