--- a/berries/index.html
+++ b/berries/index.html
@@ -13,9 +13,9 @@
       <strong>Berries</strong>
       <nav>
         <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="resources.html">Resources</a></li>
-          <li><a href="berries/index.html">Berries</a></li>
+          <li><a href="../index.html">Home</a></li>
+          <li><a href="../resources.html">Resources</a></li>
+          <li><a href="../berries/index.html">Berries</a></li>
         </ul>
       </nav>
     </head>
@@ -27,10 +27,10 @@
 
     <nav>
       <ul>
-        <li><a href="berries/bananas.html">Bananas</a></li>
-        <li><a href="berries/grapes.html">Grapes</a></li>
-        <li><a href="berries/red-currants.html">Red Currants</a></li>
-        <li><a href="berries/blueberries.html">Blueberries</a></li>
+        <li><a href="../berries/bananas.html">Bananas</a></li>
+        <li><a href="../berries/grapes.html">Grapes</a></li>
+        <li><a href="../berries/red-currants.html">Red Currants</a></li>
+        <li><a href="../berries/blueberries.html">Blueberries</a></li>
 
       </ul>
     </nav>
