Add footer to resources page

--- a/resources.html
+++ b/resources.html
@@ -33,4 +33,5 @@
   https://www.chapters.indigo.ca/en-ca/books/fresh-from-the-garden-an/9780816698394-item.html
 </main>
 </body>
+<footer role="contentinfo"><small>Berries ©</small></footer>
 </html>
