Add links and corresponding tags to resources page

--- a/berries/index.html
+++ b/berries/index.html
@@ -9,7 +9,7 @@
 <body>
   <header>
 
-    <head>
+
       <strong>Berries</strong>
       <nav>
         <ul>
@@ -18,7 +18,7 @@
           <li><a href="../berries/index.html">Berries</a></li>
         </ul>
       </nav>
-    </head>
+
   </header>
   <h1>Lots of berries—some you didn’t know!</h1>
 
@@ -36,6 +36,7 @@
     </nav>
   </main>
 
+  <footer role="contentinfo"><small>Berries ©</small></footer>
 
 </body>
 </html>
