--- a/resources.html
+++ b/resources.html
@@ -19,19 +19,20 @@
   </header>
 
   <main role="main">
-    <h1>Resources</h1> Find out more about berries!
+    <h1>Resources</h1>
+    <p>Find out more about berries!</p>
 
-  <a href="https://en.wikipedia.org/wiki/Berry" aria-label="Read more about Berries">Read More</a>
-
-
-  <a href="https://en.wikipedia.org/wiki/Berry"></a>
-  https://en.wikipedia.org/wiki/Blueberry
-  https://en.wikipedia.org/wiki/Grape
-  https://en.wikipedia.org/wiki/Redcurrant
-  https://en.wikipedia.org/wiki/Banana
-  https://www.chapters.indigo.ca/en-ca/books/whats-wrong-with-my-fruit/9781604693584-item.html
-  https://www.chapters.indigo.ca/en-ca/books/fresh-from-the-garden-an/9780816698394-item.html
+<ul>
+  <li><a href="">https://en.wikipedia.org/wiki/Berry</a></li>
+  <li><a href="">https://en.wikipedia.org/wiki/Blueberry</a></li>
+  <li><a href="">https://en.wikipedia.org/wiki/Grape</a></li>
+  <li><a href="">https://en.wikipedia.org/wiki/Redcurrant</a></li>
+  <li><a href="">https://en.wikipedia.org/wiki/Banana</a></li>
+  <li><a href="">https://www.chapters.indigo.ca/en-ca/books/whats-wrong-with-my-fruit/9781604693584-item.html</a></li>
+  <li><a href="">https://www.chapters.indigo.ca/en-ca/books/fresh-from-the-garden-an/9780816698394-item.html</a></li>
+</ul>
 </main>
-</body>
 <footer role="contentinfo"><small>Berries ©</small></footer>
+</body>
+
 </html>
