--- a/index.html
+++ b/index.html
@@ -7,28 +7,28 @@
 </head>
 <body>
   <header role="banner">
-    <h1>Berries</h1>
+    <strong>Berries</strong>
 
-    <nav>
+    <nav role="navigation">
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="resources.html">Resources</a></li>
         <li><a href="berries/index.html">Berries</a></li>
       </ul>
     </nav>
+    <h1>Berries, berries, oh my!</h1>
   </header>
-  <main>
-    Berries
 
-    Berries, berries, oh my!
-
-    In everyday English, “berry” is a term for any small edible fruit. These “berries” are usually juicy, round, brightly coloured, sweet or sour, and do not have a stone or pit, although many seeds may be present.
-
-    - Blueberries
-    - Grapes
-    - Red Currants
-    - Bananas
+  <main role="main">
+    <p>In everyday English, “berry” is a term for any small edible fruit. These “berries” are usually juicy, round, brightly coloured, sweet or sour, and do not have a stone or pit, although many seeds may be present.</p>
+    <ul>
+      <li>Blueberries</li>
+      <li>Grapes</li>
+      <li>Red Currants</li>
+      <li>Bananas</li>
+    </ul>
   </main>
+
+  <footer role="contentinfo"><small>Berries ©</small></footer>
 </body>
-<footer role="contentinfo"><small>Berries ©</small></footer>
 </html>
