Fix all links to berry index

--- a/berries/bananas.html
+++ b/berries/bananas.html
@@ -13,18 +13,16 @@
       <ul>
         <li><a href="../index.html">Home</a></li>
         <li><a href="../resources.html">Resources</a></li>
-        <li><a href="../berries/index.html">Berries</a></li>
+        <li><a href="index.html">Berries</a></li>
       </ul>
     </nav>
   </header>
-
-
   <main role="main">
     <h1>Bananas</h1>
-    <img src="../images/bananas.jpg" alt="Cluster of bananas">
+    <img src="../images/bananas.jpg" alt="A cluster of bananas.">
     <p>Not commonly considered a berry, bananas are botanically a berry: a simple fruit with seeds and pulp produced from a single flower.</p>
-
   </main>
+
   <footer role="contentinfo"><small>Berries ©</small></footer>
 
 </body>
