--- a/berries/blueberries.html
+++ b/berries/blueberries.html
@@ -13,15 +13,13 @@
       <ul>
         <li><a href="../index.html">Home</a></li>
         <li><a href="../resources.html">Resources</a></li>
-        <li><a href="../berries/index.html">Berries</a></li>
+        <li><a href="index.html">Berries</a></li>
       </ul>
     </nav>
   </header>
-
-
   <main role="main">
     <h1>Blueberries</h1>
-    <img src="../images/blueberries.jpg" alt="Blueberries on a vine">
+    <img src="../images/blueberries.jpg" alt="Blueberries growing on a vine.">
     <p>Blueberries are perennial flowering plants with indigo-colored berries. Most common fruits sold as “blueberries” and are native to North America.</p>
 
   </main>
