--- a/berries/grapes.html
+++ b/berries/grapes.html
@@ -13,18 +13,16 @@
       <ul>
         <li><a href="../index.html">Home</a></li>
         <li><a href="../resources.html">Resources</a></li>
-        <li><a href="../berries/index.html">Berries</a></li>
+        <li><a href="index.html">Berries</a></li>
       </ul>
     </nav>
   </header>
-
-
   <main role="main">
     <h1>Grapes</h1>
-    <img src="../images/grapes.jpg" alt="Grapes on a vine">
+    <img src="../images/grapes.jpg" alt="Grapes growing on a vine.">
     <p>Grapes can be eaten raw or they can be used for making wine, jam, juice, jelly, grape seed extract, raisins, vinegar, and grape seed oil.</p>
-
   </main>
+
   <footer role="contentinfo"><small>Berries ©</small></footer>
 
 </body>
