--- a/berries/index.html
+++ b/berries/index.html
@@ -7,23 +7,21 @@
 </head>
 
 <body>
-  <header>
 
-
-      <strong>Berries</strong>
-      <nav>
-        <ul>
-          <li><a href="../index.html">Home</a></li>
-          <li><a href="../resources.html">Resources</a></li>
-          <li><a href="../berries/index.html">Berries</a></li>
-        </ul>
-      </nav>
-
+  <header role="banner">
+    <strong>Berries</strong>
+    <nav role="navigation">
+      <ul>
+        <li><a href="../index.html">Home</a></li>
+        <li><a href="../resources.html">Resources</a></li>
+        <li><a href="index.html">Berries</a></li>
+      </ul>
+    </nav>
   </header>
-  <h1>Lots of berries—some you didn’t know!</h1>
 
-  <main>
-    There are lots of berries in many different sizes & shapes. And, botanically, there are lots of berries that you don’t normally consider.
+  <main role="main">
+    <h1>Lots of berries—some you didn’t know!</h1>
+    <p>There are lots of berries in many different sizes & shapes. And, botanically, there are lots of berries that you don’t normally consider.</p>
 
     <nav>
       <ul>
@@ -31,7 +29,6 @@
         <li><a href="../berries/grapes.html">Grapes</a></li>
         <li><a href="../berries/red-currants.html">Red Currants</a></li>
         <li><a href="../berries/blueberries.html">Blueberries</a></li>
-
       </ul>
     </nav>
   </main>
