--- a/berries/red-currants.html
+++ b/berries/red-currants.html
@@ -13,17 +13,14 @@
       <ul>
         <li><a href="../index.html">Home</a></li>
         <li><a href="../resources.html">Resources</a></li>
-        <li><a href="../berries/index.html">Berries</a></li>
+        <li><a href="index.html">Berries</a></li>
       </ul>
     </nav>
   </header>
-
-
   <main role="main">
     <h1>Red Currants</h1>
     <img src="../images/red-currants.jpg" alt="Red currants on a vine">
     <p>With maturity, the tart flavour of redcurrant fruit is slightly greater than its blackcurrant relative, but with the same approximate sweetness.</p>
-
   </main>
   <footer role="contentinfo"><small>Berries ©</small></footer>
 
