--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
   <title>Home</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
 </head>
+
 <body>
   <header role="banner">
     <strong>Berries</strong>
-
     <nav role="navigation">
       <ul>
         <li><a href="index.html">Home</a></li>
@@ -17,12 +17,12 @@
       </ul>
     </nav>
     <h1>Berries, berries, oh my!</h1>
+    <p>In everyday English, “berry” is a term for any small edible fruit. These “berries” are usually juicy, round, brightly coloured, sweet or sour, and do not have a stone or pit, although many seeds may be present.</p>
   </header>
 
   <main role="main">
-    <p>In everyday English, “berry” is a term for any small edible fruit. These “berries” are usually juicy, round, brightly coloured, sweet or sour, and do not have a stone or pit, although many seeds may be present.</p>
     <ul>
-      <li>Blueberries</li>
+      <li><a href="berries/blueberries"></a>Blueberries</li>
       <li>Grapes</li>
       <li>Red Currants</li>
       <li>Bananas</li>
